[tool.poetry]
name = "reuters-factcheck-data"
version = "0.1.0"
description = ""
authors = ["Anca Sarb <sarb.anca@gmail.com>"]
readme = "README.md"
packages = [{include = "reuters_factcheck_data" , from = "src/"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"